# gbglow

./: .gitignore  BOOT_ROM.md  CMakeLists.txt  CONTRIBUTING.md  README.md  ROADMAP.md  build.sh  copilot-instructions.md  cppcheck.suppressions  install_deps_ubuntu.sh  pokemon_roja.sav  run.sh
.github/workflows/: ci.yml
config/: keybindings.conf
docs/: Makefile  conf.py  cpu.md  index.rst  memory.md  overview.rst  progress.md
docs/_static/: custom.css
docs/api/: apu.rst  cartridge.rst  cpu.rst  emulator.rst  index.rst  joypad.rst  mbc.rst  memory.rst  ppu.rst  registers.rst  timer.rst
docs/architecture/: apu.md  apu.rst  cartridge.rst  cpu.rst  index.rst  interrupts.rst  memory.rst  ppu.rst
docs/development/: index.rst
docs/implementation/: index.rst
docs/sphinx/: conf.py  index.rst  overview.rst
docs/sphinx/api/: emulator.rst  index.rst
docs/sphinx/architecture/: apu.rst  cartridge.rst  cpu.rst  index.rst  interrupts.rst  memory.rst  ppu.rst
docs/sphinx/development/: index.rst
docs/sphinx/implementation/: index.rst
src/: main.cpp
src/audio/: apu.cpp  apu.h
src/cartridge/: cartridge.cpp  cartridge.h  mbc1.cpp  mbc1.h  mbc3.cpp  mbc3.h  mbc5.cpp  mbc5.h
src/core/: constants.cpp  constants.h  cpu.cpp  cpu.h  cpu_constants.h  emulator.cpp  emulator.h  game_loop.cpp  instructions.cpp  instructions_cb.cpp  io_registers.h  logging.h  memory.cpp  memory.h  platform.h  registers.cpp  registers.h  savestate.cpp  savestate.h  savestate_io.cpp  timer.cpp  timer.h  types.h
src/debug/: debugger.cpp  debugger.h  debugger_gui.cpp  debugger_gui.h
src/input/: gamepad.cpp  gamepad.h  joypad.cpp  joypad.h
src/ui/: recent_roms.cpp  recent_roms.h  screenshot.cpp  screenshot.h
src/video/: display.cpp  display.h  lcd.cpp  lcd.h  ppu.cpp  ppu.h
tests/: CMakeLists.txt  test_basic.cpp  test_common.h  test_core.cpp  test_persistence.cpp  test_ppu.cpp
